exports[`ActionBar should render without actions 1`] = `
<nav
  className="tc-actionbar-container nav" />
`;

exports[`ActionBar should render no-selected actions, all on left  1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-left">
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Primary
      </span>
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;

exports[`ActionBar should render no-selected actions, all on right 1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-right">
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Primary
      </span>
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;

exports[`ActionBar should render no-selected actions, some on left, the other on right 1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-left">
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Primary
      </span>
    </button>
  </div>
  <div
    className="navbar-right">
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;

exports[`ActionBar should render selected count and multi-selected actions, all on left 1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-left">
    <span
      className="tc-actionbar-selected-count">
      1
       selected
    </span>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;

exports[`ActionBar should render selected count and multi-selected actions, all on right 1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-right">
    <span
      className="tc-actionbar-selected-count">
      1
       selected
    </span>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;

exports[`ActionBar should render selected count and multi-selected actions, count and some actions on left, the other on right 1`] = `
<nav
  className="tc-actionbar-container nav">
  <div
    className="navbar-left">
    <span
      className="tc-actionbar-selected-count">
      1
       selected
    </span>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
  <div
    className="navbar-right">
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-asterisk"
        title={null} />
      <span>
        Secondary
      </span>
    </button>
  </div>
</nav>
`;
